<resources>
    <string name="app_name">塑料圈通讯录</string>

    <string name="xlistview_header_hint_normal">松开刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新</string>
    <string name="xlistview_header_last_time"></string>
    <string name="xlistview_footer_hint_normal"></string>
    <string name="xlistview_footer_hint_ready"></string>

    <string name="day_name_format">E</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>

    <string name="hint_phone"><font size="14">请填写手机号码</font></string>
    <string name="hint_pass"><font size="14">请填写密码</font></string>
    <string name="hint_indentify"><font size="14">请填写验证码</font></string>
    <string name="hint_indentify_"><font size="14">请填写动态码</font></string>
    <string name="hint_pass_new"><font size="14">请填写新密码</font></string>
    <string name="hint_company"><font size="14">请填写公司名称</font></string>
    <string name="hint_company_type"><font size="14">请选择企业类型</font></string>
    <string name="hint_name"><font size="14">请填写姓名</font></string>
    <string name="font_color_red1"><font color="#ff0000">*</font>请上传清晰营业执照</string>
    <string name="font_color_red2"><font color="#ff0000">*</font>请上传本人头像</string>
    <string name="font_color_red3"><font color="#ff0000">*</font>公司名称</string>
    <string name="font_color_red5"><font color="#ff0000">*</font>统一社会信用代码</string>
    <string name="font_color_red4"><font color="#ff0000">*</font>公司简介</string>

    <string name="vip_store_introduction">店铺会员为塑料圈开通店铺用户，开通店铺后用户可免费查看通讯录、头条、无限发布供求信息。</string>
    <string name="vip_news_introduction">店铺会员为塑料圈购买塑料圈头条用户，购买后享有免费查看通讯录、头条、无限发布供求信息。</string>
    <string name="vip_tried_introduction">新注册会员为普通会员，免费查看通讯录、头条、无限发布供求信息，权限有效期7日。</string>
    <string name="text_vip_expired">请拨打客服电话<font color="#FF8200">0533-7859005</font>进行续费</string>


</resources>
