<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.myplas.q.common.view.MyEditText
        android:id="@+id/register_tel"
        style="@style/login_edittext"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:drawableLeft="@drawable/icon_username"
        android:hint="@string/hint_phone"
        android:inputType="number"
        android:maxLength="11" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <com.myplas.q.common.view.MyEditText
            android:id="@+id/register_identify"
            style="@style/login_edittext"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@drawable/icon_number_code"
            android:hint="@string/hint_indentify"
            android:inputType="number" />

        <TextView
            android:id="@+id/register_tv_indentify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape_red_coners"
            android:padding="6dp"
            android:text="获取验证码"
            android:textColor="@color/color_white" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />

    <com.myplas.q.common.view.MyEditText
        android:id="@+id/register_pass"
        style="@style/login_edittext"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:drawableLeft="@drawable/icon_passworld"
        android:hint="@string/hint_pass"
        android:inputType="textPassword" />


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />


    <LinearLayout
        android:id="@+id/register_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/register_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btn_checkbox_hl" />

        <TextView
            android:id="@+id/register_tv_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn_shape"
        android:text="下一步"
        android:textColor="@color/color_white"
        android:textSize="16.0sp" />

</LinearLayout>