<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="80px"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_username" />
        </LinearLayout>

        <com.myplas.q.common.view.MyEditText
            android:id="@+id/register_name"
            style="@style/login_edittext"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/hint_name"
            android:maxLength="11" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp">

        <LinearLayout
            android:layout_width="80px"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_companyname" />
        </LinearLayout>

        <com.myplas.q.common.view.MyEditText
            android:id="@+id/register_company"
            style="@style/login_edittext"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/hint_company" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80px"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icon_companytype" />
        </LinearLayout>

        <com.myplas.q.common.view.MyEditText
            android:id="@+id/register_type"
            style="@style/login_edittext"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:focusable="false"
            android:hint="@string/hint_company_type" />

        <ImageView
            android:id="@+id/register_tv_indentify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/icon_more"
            android:textColor="@color/color_white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="4dp"
        android:background="@color/color_red" />


    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:background="@drawable/login_btn_shape"
        android:text="确 定"
        android:textColor="@color/color_white"
        android:textSize="16.0sp" />
</LinearLayout>