<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/common_layout_titlebar" />

    <com.myplas.q.common.view.EmptyView
        android:id="@+id/store_emptyview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/store_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/icon_store_null" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="您还未开通店铺，提交一下资料去开通吧！"
                    android:textColor="@color/color_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/font_color_red1"
                    android:textColor="@color/color_balank" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal|bottom">

                    <FrameLayout
                        android:id="@+id/store_fl_licence"
                        android:layout_width="340px"
                        android:layout_height="485px"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_business_license">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:src="@drawable/btn_add" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:text="上传营业执照" />

                        <ImageView
                            android:id="@+id/store_img_show_licence"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />
                    </FrameLayout>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/img_sample1" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/color_gray_bg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/font_color_red2"
                    android:textColor="@color/color_balank" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal|bottom">

                    <FrameLayout
                        android:id="@+id/store_fl_head"
                        android:layout_width="288px"
                        android:layout_height="288px"
                        android:layout_gravity="center"
                        android:background="@drawable/bg_image">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:src="@drawable/btn_add" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:maxLines="1"
                            android:text="上传本人头像" />

                        <ImageView
                            android:id="@+id/store_img_show_head"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />
                    </FrameLayout>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/img_sample2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/color_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/font_color_red3"
                        android:textColor="@color/color_balank" />

                    <com.myplas.q.common.view.MyEditText
                        android:id="@+id/store_edit_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:hint="请输入您公司的完整名称"
                        android:padding="5dp"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_gray_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/font_color_red5"
                        android:textColor="@color/color_balank" />

                    <com.myplas.q.common.view.MyEditText
                        android:id="@+id/store_edit_business"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:hint="请输入统一社会信用代码"
                        android:padding="5dp"
                        android:textSize="14.0sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2px"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/color_gray_bg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/font_color_red4"
                        android:textColor="@color/color_balank" />

                    <com.myplas.q.common.view.MyEditText
                        android:id="@+id/store_edit_introduction"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/corner_edittext_gray"
                        android:gravity="start"
                        android:hint="请输入你的公司简介"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:textSize="14.0sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/store_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:background="@drawable/login_btn_shape"
                android:text="提交"
                android:textColor="@color/color_white"
                android:textSize="16.0sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>